{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 1767,
  "lineage": "30380b3b-b3ec-87ca-2762-7a047e6d309a",
  "resources": [
    {
      "module": "module.mail_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e83be366243f524a",
            "arn": "arn:aws:ec2:us-east-2:275560321332:instance/i-0aaa7b5413de11e55",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aaa7b5413de11e55",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "mail_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02b32cfba8fb1080c",
            "private_dns": "ip-10-3-1-52.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.3.1.52",
            "public_dns": "ec2-13-59-62-77.us-east-2.compute.amazonaws.com",
            "public_ip": "13.59.62.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0433d53836a024a65",
                "volume_size": 15,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-081602a55e2f5a1c5",
            "tags": {
              "Name": "6_mail_server"
            },
            "tags_all": {
              "Name": "6_mail_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02d61f9cd6a37c7e7"
            ]
          },
          "dependencies": [
            "module.mail_network.aws_subnet.pub_subnet_1",
            "module.mail_network.aws_vpc.hub_vpc",
            "module.sg.aws_security_group.allow_all"
          ]
        }
      ]
    },
    {
      "module": "module.mail_network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hub_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:275560321332:internet-gateway/igw-0511a8f5cf2498862",
            "id": "igw-0511a8f5cf2498862",
            "owner_id": "275560321332",
            "tags": {
              "Name": "1_mail"
            },
            "tags_all": {
              "Name": "1_mail"
            },
            "vpc_id": "vpc-0ab220c1548044a2e"
          },
          "dependencies": [
            "module.mail_network.aws_vpc.hub_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mail_network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:275560321332:route-table/rtb-029567410c2965219",
            "id": "rtb-029567410c2965219",
            "owner_id": "275560321332",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0511a8f5cf2498862",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "1_mail"
            },
            "tags_all": {
              "Name": "1_mail"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab220c1548044a2e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mail_network.aws_internet_gateway.hub_vpc",
            "module.mail_network.aws_vpc.hub_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mail_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2324eee5ff7c22b",
            "route_table_id": "rtb-029567410c2965219",
            "subnet_id": "subnet-081602a55e2f5a1c5"
          },
          "dependencies": [
            "module.mail_network.aws_internet_gateway.hub_vpc",
            "module.mail_network.aws_route_table.public",
            "module.mail_network.aws_subnet.pub_subnet_1",
            "module.mail_network.aws_vpc.hub_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mail_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003a598115666b265",
            "route_table_id": "rtb-029567410c2965219",
            "subnet_id": "subnet-04e4919a0be7b034b"
          },
          "dependencies": [
            "module.mail_network.aws_internet_gateway.hub_vpc",
            "module.mail_network.aws_route_table.public",
            "module.mail_network.aws_subnet.pub_subnet_2",
            "module.mail_network.aws_vpc.hub_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mail_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:275560321332:subnet/subnet-081602a55e2f5a1c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.3.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081602a55e2f5a1c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "275560321332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "1_mail_pub_sub_1"
            },
            "tags_all": {
              "Name": "1_mail_pub_sub_1"
            },
            "vpc_id": "vpc-0ab220c1548044a2e"
          },
          "dependencies": [
            "module.mail_network.aws_vpc.hub_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mail_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:275560321332:subnet/subnet-04e4919a0be7b034b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.3.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e4919a0be7b034b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "275560321332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "1_mail_pub_sub_2"
            },
            "tags_all": {
              "Name": "1_mail_pub_sub_2"
            },
            "vpc_id": "vpc-0ab220c1548044a2e"
          },
          "dependencies": [
            "module.mail_network.aws_vpc.hub_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mail_network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hub_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:275560321332:vpc/vpc-0ab220c1548044a2e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.3.0.0/16",
            "default_network_acl_id": "acl-032d03608806e1748",
            "default_route_table_id": "rtb-07d0c91029c053af2",
            "default_security_group_id": "sg-0a582d3375c63e227",
            "dhcp_options_id": "dopt-03ecc87f2ef33c8f8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ab220c1548044a2e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07d0c91029c053af2",
            "owner_id": "275560321332",
            "tags": {
              "Name": "1_mail_infra"
            },
            "tags_all": {
              "Name": "1_mail_infra"
            }
          }
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:275560321332:security-group/sg-02d61f9cd6a37c7e7",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02d61f9cd6a37c7e7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "275560321332",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ab220c1548044a2e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.mail_network.aws_vpc.hub_vpc"
          ]
        }
      ]
    }
  ]
}